; Generate stdlib_fs.js using js_of_ocaml build-fs

(rule
 (target stdlib_fs.js)
 (deps
  (glob_files ../../stdlib/*.catala_*))
 (action
  (run js_of_ocaml build-fs -o %{target} %{deps})))

(executable
 (name catala_web_interpreter)
 (modes js)
 (modules catala_web_interpreter)
 (link_flags
  (:standard -linkall))
 (js_of_ocaml
  (javascript_files stdlib_fs.js))
 (preprocess
  (pps js_of_ocaml-ppx))
 (libraries
  catala.driver
  js_of_ocaml
  catala.runtime_ocaml
  catala.stdlib_internals
  zarith_stubs_js))

(rule
 (alias runtest-js)
 (package catala-js)
 (deps
  catala_web_interpreter.bc.js
  (source_tree ../../tests))
 (action
  (run node %{dep:test_web_interpreter.js})))

(install
 (files
  (catala_web_interpreter.bc.js as catala_web_interpreter.js))
 (section share)
 (package catala-js))
