(rule
 (targets aides_logement.ml aides_logement_api_web.ml)
 (deps
  (source_tree ..)
  ../../compiler/plugins/api_web%{ext_plugin})
 (action
  (run
   catala
   api_web
   -t
   --plugin-dir=../../compiler/plugins
   aides_logement.catala_fr)))

(rule
 (targets aides_logement_schema.json)
 (deps
  (source_tree ..)
  ../../compiler/plugins/json_schema%{ext_plugin})
 (action
  (run
   catala
   json_schema
   -t
   --plugin-dir=../../compiler/plugins
   "--scope=CalculetteAidesAuLogementGardeAltern\195\169e"
   aides_logement.catala_fr)))

(rule
 (target aides_logement.py)
 (deps
  (source_tree ..))
 (action
  (run catala Python -O aides_logement.catala_fr)))
