(rule
 (targets aides_logement.ml aides_logement_api_web.ml)
 (deps
  (source_tree ..)
  %{workspace_root}/compiler/plugins/api_web%{ext_plugin})
 (action
  (chdir
   %{workspace_root}
   (run
    catala
    api_web
    -t
    --plugin-dir=compiler/plugins
    %{dep:aides_logement.catala_fr}))))

(rule
 (targets aides_logement_schema.json)
 (deps
  (source_tree ..)
  %{workspace_root}/compiler/plugins/json_schema%{ext_plugin})
 (action
  (chdir
   %{workspace_root}
   (run
    catala
    json_schema
    -t
    --plugin-dir=compiler/plugins
    "--scope=CalculetteAidesAuLogementGardeAltern\195\169e"
    %{dep:aides_logement.catala_fr}))))

(rule
 (target aides_logement.py)
 (deps
  (source_tree ..))
 (action
  (chdir
   %{workspace_root}
   (run catala Python -O -t %{dep:aides_logement.catala_fr}))))
