(executable
 (name bench)
 (modes native)
 (modules bench)
 (libraries catala.runtime_ocaml french_law benchmark))

(executable
 (name api_web)
 (modes byte js)
 (modules
  (:standard \ bench api))
 (preprocess
  (pps js_of_ocaml-ppx))
 (js_of_ocaml
  (flags --disable=shortvar --opt 3))
 ; We need to disable shortvar because
 ; otherwise Webpack wrongly minifies
 ; the library and it gives bugs.
 (libraries
  catala.runtime_ocaml
  catala.runtime_jsoo
  js_of_ocaml
  yojson
  law_source))

(library
 (name api)
 (public_name french_law)
 (synopsis
  "A collection of functions for computing French taxes and benefits derived from Catala programs")
 (libraries catala.runtime_ocaml law_source)
 (modules api))
