(rule
 (deps runtime.c runtime.h)
 (target runtime.o)
 (action
  (system
   "%{cc} --std=c89 -Wall -Werror -pedantic -c runtime.c -I $(ocamlfind query dates_calc)/c -o %{target}")))

(rule
 (deps runtime.o)
 (target catala_runtime.a)
 (action
  (run ar rcs %{target} %{lib:dates_calc:c/dates_calc.o} %{deps})))
