(rule
 (with-stdout-to
  gmph
  (run pkg-config --cflags gmp)))

(rule
 (deps runtime.c runtime.h dates_calc.h)
 (target runtime.o)
 (action
  (system
   "%{cc} --std=c89 -Wall -Werror -pedantic -c runtime.c -I . %{read-strings:gmph} -o %{target}")))

(rule
 (deps runtime.o)
 (target catala_runtime.a)
 (action
  ; FIXME: ar is not portable, it makes the build fails on windows.
  ; A workaround is to install a mingw toolchain that exposes ar.
  (run ar rcs %{target} %{lib:dates_calc:c/dates_calc.o} %{deps})))

(rule
 (target dates_calc.h)
 (action
  (copy %{lib:dates_calc:c/dates_calc.h} %{target})))

(rule
 (target runtime-test.c.exe)
 (deps dates_calc.h)
 (action
  (run
   %{cc}
   --std=c89
   -Wall
   -Werror
   -pedantic
   %{dep:runtime-test.c}
   -I.
   %{dep:catala_runtime.a}
   -lgmp
   -o
   %{target})))

(rule
 (alias runtest)
 (action
  (run ./runtime-test.c.exe)))
