(executable
 (name discover)
 (modes native)
 (libraries re compiler-libs.common))

(rule
 (with-stdout-to
  gmp_include_flags
  (run ./discover.exe gmp_flags)))

(rule
 (deps runtime.c runtime.h dates_calc.h)
 (target runtime.o)
 (action
  (system
   "%{cc} --std=c89 -Wall -Werror -pedantic -c runtime.c -I . %{read-strings:gmp_include_flags} -o %{target}")))

(rule
 (with-stdout-to
  ar_bin_name
  (run ./discover.exe ar)))

(rule
 (deps runtime.o)
 (target catala_runtime.a)
 (action
  (run
   %{read-strings:ar_bin_name}
   rcs
   %{target}
   %{lib:dates_calc:c/dates_calc.o}
   %{deps})))

(rule
 (target dates_calc.h)
 (action
  (copy %{lib:dates_calc:c/dates_calc.h} %{target})))

(rule
 (target runtime-test.c.exe)
 (deps dates_calc.h)
 (action
  (run
   %{cc}
   --std=c89
   -Wall
   -Werror
   -pedantic
   %{dep:runtime-test.c}
   -I.
   %{dep:catala_runtime.a}
   -lgmp
   -o
   %{target})))

(rule
 (alias runtest)
 (action
  (run ./runtime-test.c.exe)))
