[project]
name = "catala-runtime"
description = "Runtime libraries needed to execute Catala programs compiled to Python"
version = "0.10.0"
dependencies = [
  "gmpy2",
  "typing",
  "mypy",
  "python-dateutil",
  "types-python-dateutil",
  "autopep8",
  "termcolor",
  "types-termcolor",
  "typer[all]",
  "typing-extensions"
]

[project.optional-dependencies]
test = [
  "pytest",
  "pytest-cov",
]

[project.urls]
"Homepage" = "https://github.com/CatalaLang/catala/"
"Bug Tracker" = "https://github.com/CatalaLang/catala/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/catala"]
