[project]
name = "catala-runtime"
description = "Runtime libraries needed to execute Catala programs compiled to Python"
version = "1.0.1"
dependencies = [
  "gmpy2 ~= 2.2.0rc1",
  "typing",
  "mypy",
  "dates_calc",
  "types-python-dateutil",
  "autopep8",
  "termcolor",
  "types-termcolor",
  "typer[all]",
  "typing-extensions",
]

[project.optional-dependencies]
test = ["pytest", "pytest-cov"]

[project.urls]
"Homepage" = "https://github.com/CatalaLang/catala/"
"Bug Tracker" = "https://github.com/CatalaLang/catala/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/catala"]
