[project]
name = "catala-runtime"
description = "Runtime libraries needed to execute Catala programs compiled to Python"
version = "1.1.0"
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
test = ["pytest", "pytest-cov"]

[project.urls]
"Homepage" = "https://github.com/CatalaLang/catala/"
"Bug Tracker" = "https://github.com/CatalaLang/catala/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/catala"]
