(library
 (public_name catala)
 (libraries catala.utils catala.surface catala.desugared catala.literate
   catala.dcalc catala.lcalc)
 (modules
  (:standard \ catala_web catala)))

(executable
 (name catala_web)
 (modes byte js)
 (package catala)
 (public_name catala_web)
 (modules catala_web)
 (preprocess
  (pps js_of_ocaml-ppx))
 (libraries catala js_of_ocaml))

(executable
 (name catala)
 (modes native)
 (package catala)
 (modules catala)
 (public_name catala)
 (libraries catala))

(documentation
 (package catala))
