(library
 (public_name catala)
 (libraries catala.utils catala.surface catala.desugared catala.literate
   catala.dcalc catala.lcalc catala.runtime)
 (modules driver))

(library
 (name runtime)
 (public_name catala.runtime)
 (libraries calendar zarith zarith_stubs_js hmap)
 (modules runtime))

(executable
 (name catala_web)
 (modes byte js)
 (package catala)
 (public_name catala_web)
 (modules catala_web)
 (preprocess
  (pps js_of_ocaml-ppx))
 (libraries catala js_of_ocaml))

(executable
 (name catala)
 (modes native)
 (package catala)
 (modules catala)
 (public_name catala)
 (libraries catala))

(documentation
 (package catala))
