(library
 (name driver)
 (package catala)
 (libraries utils surface desugared literate dcalc lcalc runtime)
 (modules driver))

(library
 (name catala_lib)
 (public_name catala.catala_lib)
 (libraries driver utils surface desugared literate dcalc lcalc runtime)
 (modules catala_lib))

(library
 (name runtime)
 (package catala)
 (libraries calendar zarith zarith_stubs_js)
 (modules runtime))

(executable
 (name catala_web)
 (modes byte js)
 (package catala)
 (public_name catala_web)
 (modules catala_web)
 (preprocess
  (pps js_of_ocaml-ppx))
 (libraries catala_lib js_of_ocaml))

(executable
 (name catala)
 (modes native)
 (package catala)
 (modules catala)
 (public_name catala)
 (libraries catala_lib))

(documentation
 (package catala)
 (mld_files index))
